<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- frame_1 strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="_decimal_button">.</string>
	<string name="_0_button">0</string>
	<string name="_1_button">1</string>
	<string name="_2_button">2</string>
	<string name="_3_button">3</string>
	<string name="_6_button">6</string>
	<string name="_5_button">5</string>
	<string name="_4_button">4</string>
	<string name="_7_button">7</string>
	<string name="_8_button">8</string>
	<string name="_9_button">9</string>
	<string name="_C_button">C</string>
</resources>