<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		frame_1
	 *	@date 		Thursday 07th of September 2023 04:07:29 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/frame_1" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<View   android:id="@+id/_bg__frame_1"
				android:background="@drawable/_bg__frame_1_shape"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="760dp" />

			<View
				android:id="@+id/rectangle_1"
				android:layout_width="393dp"
				android:layout_height="829dp"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:background="@drawable/rectangle_1_shape" />

			<View   android:id="@+id/rectangle_2"
				android:background="@drawable/rectangle_2_shape"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="393dp"
				android:layout_height="245dp" />

			<View   android:id="@+id/circle"
				android:background="@drawable/circle_shape"
				 android:layout_marginStart="50dp"
				android:layout_marginTop="580dp"
				android:layout_width="75dp"
				android:layout_height="75dp" />

			<View
				android:id="@+id/circle_ek1"
				android:layout_width="75dp"
				android:layout_height="75dp"
				android:layout_marginStart="50dp"
				android:layout_marginTop="460dp"
				android:background="@drawable/circle_ek1_shape" />

			<View   android:id="@+id/circle_ek2"
				android:background="@drawable/circle_ek2_shape"
				 android:layout_marginStart="50dp"
				android:layout_marginTop="340dp"
				android:layout_width="75dp"
				android:layout_height="75dp" />

			<View   android:id="@+id/circle_ek3"
				android:background="@drawable/circle_ek3_shape"
				 android:layout_marginStart="160dp"
				android:layout_marginTop="340dp"
				android:layout_width="75dp"
				android:layout_height="75dp" />

			<View   android:id="@+id/circle_ek4"
				android:background="@drawable/circle_ek4_shape"
				 android:layout_marginStart="270dp"
				android:layout_marginTop="340dp"
				android:layout_width="75dp"
				android:layout_height="75dp" />

			<View   android:id="@+id/circle_ek5"
				android:background="@drawable/circle_ek5_shape"
				 android:layout_marginStart="160dp"
				android:layout_marginTop="460dp"
				android:layout_width="75dp"
				android:layout_height="75dp" />

			<View   android:id="@+id/circle_ek6"
				android:background="@drawable/circle_ek6_shape"
				 android:layout_marginStart="270dp"
				android:layout_marginTop="460dp"
				android:layout_width="75dp"
				android:layout_height="75dp" />

			<View   android:id="@+id/circle_ek7"
				android:background="@drawable/circle_ek7_shape"
				 android:layout_marginStart="160dp"
				android:layout_marginTop="580dp"
				android:layout_width="75dp"
				android:layout_height="75dp" />

			<View   android:id="@+id/circle_ek8"
				android:background="@drawable/circle_ek8_shape"
				 android:layout_marginStart="270dp"
				android:layout_marginTop="580dp"
				android:layout_width="75dp"
				android:layout_height="75dp" />

			<View   android:id="@+id/circle_ek9"
				android:background="@drawable/circle_ek9_shape"
				 android:layout_marginStart="220dp"
				android:layout_marginTop="705dp"
				android:layout_width="68dp"
				android:layout_height="68dp" />

			<View   android:id="@+id/circle_ek10"
				android:background="@drawable/circle_ek10_shape"
				 android:layout_marginStart="24dp"
				android:layout_marginTop="252dp"
				android:layout_width="55dp"
				android:layout_height="55dp" />

			<View   android:id="@+id/circle_ek11"
				android:background="@drawable/circle_ek11_shape"
				 android:layout_marginStart="120dp"
				android:layout_marginTop="252dp"
				android:layout_width="55dp"
				android:layout_height="55dp" />

			<View   android:id="@+id/circle_ek12"
				android:background="@drawable/circle_ek12_shape"
				 android:layout_marginStart="220dp"
				android:layout_marginTop="252dp"
				android:layout_width="55dp"
				android:layout_height="55dp" />

			<View   android:id="@+id/circle_ek13"
				android:background="@drawable/circle_ek13_shape"
				 android:layout_marginStart="320dp"
				android:layout_marginTop="252dp"
				android:layout_width="55dp"
				android:layout_height="55dp" />

			<View   android:id="@+id/circle_ek14"
				android:background="@drawable/circle_ek14_shape"
				 android:layout_marginStart="310dp"
				android:layout_marginTop="705dp"
				android:layout_width="68dp"
				android:layout_height="68dp" />

			<View   android:id="@+id/rectangle_3"
				android:background="@drawable/rectangle_3_shape"
				 android:layout_marginStart="11dp"
				android:layout_marginTop="710dp"
				android:layout_width="169dp"
				android:layout_height="61dp" />

			<View   android:id="@+id/ellipse_1"
				android:background="@drawable/ellipse_1_shape"
				 android:layout_marginStart="341.85dp"
				android:layout_marginTop="263dp"
				android:layout_width="9.3dp"
				android:layout_height="8.09dp" />

			<View   android:id="@+id/ellipse_2"
				android:background="@drawable/ellipse_2_shape"
				 android:layout_marginStart="341.85dp"
				android:layout_marginTop="285.91dp"
				android:layout_width="9.3dp"
				android:layout_height="8.09dp" />

			<TextView
				android:id="@+id/__"
				android:layout_width="80dp"
				android:layout_height="89dp"
				android:layout_gravity="center_horizontal|center"
				android:layout_marginLeft="214dp"
				android:layout_marginTop="690dp"
				android:fontFamily="Inter"
				android:gravity="center"
				android:text="@string/_decimal_button"
				android:textColor="@color/_bg__frame_1_color"
				android:textSize="50sp" />

			<TextView android:id="@+id/_0"
				android:fontFamily="Inter"
				android:textStyle="bold"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="50sp"
				android:textColor="@color/_bg__frame_1_color"
				android:layout_marginLeft="3dp"
				android:layout_marginTop="690dp"
				android:layout_width="94dp"
				android:layout_height="103dp"
				android:text="@string/_0_button"
				 />

			<TextView
				android:id="@+id/_1"
				android:layout_width="94dp"
				android:layout_height="103dp"
				android:layout_gravity="center_horizontal|center"
				android:layout_marginLeft="@dimen/marginLeftColumn"
				android:layout_marginTop="563dp"
				android:fontFamily="Inter"
				android:gravity="center"
				android:text="@string/_1_button"
				android:textColor="@color/_bg__frame_1_color"
				android:textSize="50sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/_2"
				android:layout_width="94dp"
				android:layout_height="103dp"
				android:layout_gravity="center_horizontal|center"
				android:layout_marginLeft="@dimen/marginMiddleColumn"
				android:layout_marginTop="563dp"
				android:fontFamily="Inter"
				android:gravity="center"
				android:text="@string/_2_button"
				android:textColor="@color/_bg__frame_1_color"
				android:textSize="50sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/_3"
				android:layout_width="94dp"
				android:layout_height="103dp"
				android:layout_gravity="center_horizontal|center"
				android:layout_marginLeft="@dimen/marginRightColumn"
				android:layout_marginTop="563dp"
				android:fontFamily="Inter"
				android:gravity="center"
				android:text="@string/_3_button"
				android:textColor="@color/_bg__frame_1_color"
				android:textSize="50sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/_6"
				android:layout_width="94dp"
				android:layout_height="103dp"
				android:layout_gravity="center_horizontal|center"
				android:layout_marginLeft="@dimen/marginRightColumn"
				android:layout_marginTop="444dp"
				android:fontFamily="Inter"
				android:gravity="center"
				android:text="@string/_6_button"
				android:textColor="@color/_bg__frame_1_color"
				android:textSize="50sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/_5"
				android:layout_width="94dp"
				android:layout_height="103dp"
				android:layout_gravity="center_horizontal|center"
				android:layout_marginLeft="@dimen/marginMiddleColumn"
				android:layout_marginTop="444dp"
				android:fontFamily="Inter"
				android:gravity="center"
				android:text="@string/_5_button"
				android:textColor="@color/_bg__frame_1_color"
				android:textSize="50sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/_4"
				android:layout_width="94dp"
				android:layout_height="103dp"
				android:layout_gravity="center_horizontal|center"
				android:layout_marginLeft="@dimen/marginLeftColumn"
				android:layout_marginTop="444dp"
				android:fontFamily="Inter"
				android:gravity="center"
				android:text="@string/_4_button"
				android:textColor="@color/_bg__frame_1_color"
				android:textSize="50sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/_7"
				android:layout_width="94dp"
				android:layout_height="103dp"
				android:layout_gravity="center_horizontal|center"
				android:layout_marginLeft="@dimen/marginLeftColumn"
				android:layout_marginTop="326dp"
				android:fontFamily="Inter"
				android:gravity="center"
				android:text="@string/_7_button"
				android:textColor="@color/_bg__frame_1_color"
				android:textSize="50sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/_8"
				android:layout_width="94dp"
				android:layout_height="103dp"
				android:layout_gravity="center_horizontal|center"
				android:layout_marginLeft="@dimen/marginMiddleColumn"
				android:layout_marginTop="325dp"
				android:fontFamily="Inter"
				android:gravity="center"
				android:text="@string/_8_button"
				android:textColor="@color/_bg__frame_1_color"
				android:textSize="50sp"
				android:textStyle="bold" />

			<TextView
				android:id="@+id/_9"
				android:layout_width="94dp"
				android:layout_height="103dp"
				android:layout_gravity="center_horizontal|center"
				android:layout_marginLeft="@dimen/marginRightColumn"
				android:layout_marginTop="326dp"
				android:fontFamily="Inter"
				android:gravity="center"
				android:text="@string/_9_button"
				android:textColor="@color/_bg__frame_1_color"
				android:textSize="50sp"
				android:textStyle="bold" />

			<ImageView android:id="@+id/shape"
				android:src="@drawable/shape"
				android:contentDescription="shape"
				 android:layout_marginStart="36dp"
				android:layout_marginTop="264dp"
				android:layout_width="29.17dp"
				android:layout_height="29.17dp" />

			<ImageView android:id="@+id/shape_ek1"
				android:src="@drawable/shape_ek1"
				android:contentDescription="shape_ek1"
				 android:layout_marginStart="133dp"
				android:layout_marginTop="277dp"
				android:layout_width="29.17dp"
				android:layout_height="4.17dp" />

			<ImageView
				android:id="@+id/shape_ek"
				android:layout_width="29.17dp"
				android:layout_height="4.17dp"
				android:layout_marginStart="333dp"
				android:layout_marginTop="277dp"
				android:contentDescription="shape_ek1"
				android:src="@drawable/shape_ek1" />

			<ImageView android:id="@+id/shape_ek2"
				android:src="@drawable/shape_ek2"
				android:contentDescription="shape_ek2"
				 android:layout_marginStart="236dp"
				android:layout_marginTop="268dp"
				android:layout_width="22.5dp"
				android:layout_height="22.5dp" />

			<ImageView android:id="@+id/shape_ek3"
				android:src="@drawable/shape_ek3"
				android:contentDescription="shape_ek3"
				 android:layout_marginStart="327.5dp"
				android:layout_marginTop="735dp"
				android:layout_width="33.33dp"
				android:layout_height="13.33dp" />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>